edit the config files of mfcc and spectralband to frame=64ms, hop=32ms

--- a/conf/mfcc.conf
+++ b/conf/mfcc.conf
@@ -1,1 +1,3 @@
 --use-energy=false   # only non-default option.
+--frame-length=64   # 64ms ~ 1024 samples in 16000Hz
+--frame-shift=32    # 32ms ~ 512 samples in 16000Hz
